--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ crossorigin="anonymous">
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<canvas id="skillsChart"></canvas>
-<script src="js/skills.js"></script>
+
+
 <script src="js/index.js"></script>
 
 
@@ -71,7 +71,8 @@ crossorigin="anonymous">
         <div class="collapse navbar-collapse" id="navbarNav">
             <!-- Main Navigation Links -->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://kuheli08.github.io/my-portfolio/#">Home</a>
+                </li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
