Updated portfolio site

--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@ crossorigin="anonymous">
             </div>
         </div>
 
-      
-
-
-
-    <section id="nav-bar">
+ <section id="nav-bar">
         <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-Top">
     <div class="container">
@@ -73,9 +69,9 @@ crossorigin="anonymous">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="https://kuheli08.github.io/my-portfolio/#">Home</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://kuheli08.github.io/my-portfolio/#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://kuheli08.github.io/my-portfolio/#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://kuheli08.github.io/my-portfolio/#certificates">Certificates</a></li>
             </ul>
 
             <!-- Social Links -->
@@ -122,7 +118,7 @@ crossorigin="anonymous">
         <div class="carousel-item active">
             <img class="d-block w-100" src="images\1.jpg" alt="First Slide">
             <div class="carousel-caption">
-                <h1>Hi, I am <span class="decorate">KUHELI</span></h1>
+                <h1>HI,I am <span class="decorate">KUHELI</span></h1>
                 <p>Welcome to my portfolio website!</p>
             </div>
         </div>
